Added removable drives in user installation dialog
This patch is to avoid missing hard drives which
are present but are marked as removable.

Change-Id: If2524b3dff36703e42fb46da2bd042b3ac63f681
Closes-Bug: #1290933

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -24,17 +24,21 @@ skipx
 
 # hard drives
 drives=""
+removable_drives=""
 for drv in `ls -1 /sys/block | grep "sd\|hd\|vd\|cciss"`; do
     if (grep -q 0 /sys/block/${drv}/removable); then
         drives="${drives} ${drv}"
+    else
+        removable_drives="${removable_drives} ${drv}"
     fi
 done
+default_drive=`echo ${drives} ${removable_drives} | awk '{print $1}'`
 
 installdrive="undefined"
 forceformat="no"
 for I in `cat /proc/cmdline`; do case "$I" in *=*) eval $I;; esac ; done
 
-set ${drives}
+set ${drives} ${removable_drives}
 numdrives=`echo $#`
 
 tgtdrive="${installdrive}"
@@ -64,7 +68,7 @@ function confirm_format {
 }
 
 format_confirmed="no"
-if [ ${numdrives} -gt 1 ]; then
+if [ ${numdrives} -gt 1 ] || [ `echo ${drives} | wc -w` -eq 0 ] ; then
     exec < /dev/tty3 > /dev/tty3 2>&1
     chvt 3
     while [ "${tgtdrive}" = "undefined" ]; do
@@ -78,11 +82,17 @@ if [ ${numdrives} -gt 1 ]; then
         echo '*                                                                              *'
         echo '********************************************************************************'
         echo
-        echo "Possible choices: ${drives}"
+        echo "Possible choices"
+        echo "Persistent drives: ${drives}"
+        echo "Removable drives: ${removable_drives}"
         echo
-        read -p "Choose hard drive: " tgtdrive
+        if [ `echo ${drives} | wc -w` -eq 1 ] ; then
+            read -t 30 -p "Choose hard drive: " tgtdrive || tgtdrive=$default_drive
+        else
+            read -p "Choose hard drive: " tgtdrive
+        fi
         match="no"
-        for drive in ${drives[@]}; do
+        for drive in ${drives[@]} ${removable_drives[@]}; do
           if [[ "$drive" == "$tgtdrive" ]] && match="yes" ; then
             if confirm_format $tgtdrive ; then
               format_confirmed="yes"
