Update requirements-rpm.txt for build CentOS 6.5
Partial-bug: #1294602
Change-Id: I34519e5862bd1659f43f40502339debde1c6d046

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -28,27 +28,27 @@ ql23xx-firmware
 ql2400-firmware
 ql2500-firmware
 bind-utils-9.8.2-0.17.rc1.el6_4.6
-boost-program-options-1.41.0-17.el6_4
-boost-system-1.41.0-17.el6_4
-boost-thread-1.41.0-17.el6_4
+boost-program-options
+boost-system
+boost-thread
 byacc-1.9.20070509-7.el6
 c-ares19-1.9.1-4.el6.3
-centos-release-6-4.el6.centos.10
+centos-release
 ceph
 ceph-deploy
 ceph-radosgw
 ceph-test
 cirros-testvm
 cluster-glue-libs-1.0.11-59.1
-cman-3.0.12.1-49.el6
+cman
 cobbler
 cobbler-web
 corosync
 cpufreq-init
 crmsh-1.2.5-55.2
-cronie-1.4.4-7.el6
-cronie-anacron-1.4.4-7.el6
-cronie-noanacron-1.4.4-7.el6
+cronie
+cronie-anacron
+cronie-noanacron
 crontabs-1.10-33.el6
 curl-7.19.7-37.el6_4
 daemonize
@@ -59,7 +59,7 @@ dbus-python-0.83.0-6.1.el6
 debootstrap
 deltaiso-3.5-0.5.20090913git.el6
 deltarpm-3.5-0.5.20090913git.el6
-dhclient-4.1.1-34.P1.el6_4.1
+dhclient
 disktype
 dmidecode-2.11-2.el6
 dnsmasq-2.65-5.el6
@@ -133,14 +133,14 @@ flex-2.5.35-8.el6
 fuel-utils
 fuse-libs-2.8.3-4.el6
 galera
-gcc-4.4.7-3.el6
-gcc-c++-4.4.7-3.el6
+gcc
+gcc-c++
 gdisk-0.8.4-1.el6
 git
 gperftools-libs-2.0-11.el6.3
 gpxe-bootimgs
 haproxy
-hdparm-9.16-3.4.el6
+hdparm
 hiera
 htop
 http-parser-2.0-4.20121128gitcd01361.el6
@@ -166,16 +166,16 @@ libqb
 librados2
 librbd1
 librelp-0.1.1-4.1.el6
-libudev-147-2.46.el6
+libudev
 libunwind-1.1-2.el6
 libuser-0.56.13-5.el6
 libuv-0.10.4-1.el6
 libuv-devel-0.10.4-1.el6
-libxml2-2.7.6-12.el6_4.1
+libxml2
 libyaml-0.1.3-1.el6
 lzop-1.02-0.9.rc1.el6
 mailcap-2.1.31-2.el6
-mailx-12.4-6.el6
+mailx
 make-3.81-20.el6
 man-1.6f-32.el6
 mcollective
@@ -254,11 +254,11 @@ nodejs-0.10.4-1.el6
 nodejs-less-1.3.3-3.el6
 novnc-0.4
 nrpe-2.14-3.el6
-ntp-4.2.4p8-3.el6.centos
+ntp
 numpy-1.4.1-9.el6
-openssh-clients-5.3p1-84.1.el6
-openssh-server-5.3p1-84.1.el6
-openssl-devel-1.0.0-27.el6_4.2
+openssh-clients
+openssh-server
+openssl-devel
 openssl098e-0.9.8e-17.el6.centos.2
 openstack-ceilometer-api
 openstack-ceilometer-alarm
@@ -300,7 +300,7 @@ openstack-utils
 openvswitch
 kmod-openvswitch
 pacemaker
-parted-2.1-19.el6
+parted
 passwd-0.77-4.el6_2.2
 patch-2.6-6.el6
 pax-3.4-10.1.el6
@@ -308,12 +308,12 @@ pcapy-0.10.8-2.el6
 percona-toolkit
 perl-DBD-MySQL-4.022-1.el6
 perl-LockFile-Simple-0.207-2.el6
-perl-devel-5.10.1-131.el6_4
-policycoreutils-2.0.83-19.30.el6
-postgresql-8.4.13-1.el6_3
-postgresql-devel-8.4.13-1.el6_3
-postgresql-libs-8.4.13-1.el6_3
-postgresql-server-8.4.13-1.el6_3
+perl-devel
+policycoreutils
+postgresql
+postgresql-devel
+postgresql-libs
+postgresql-server
 pssh-2.3.1-15.2
 pcs
 puppet
@@ -348,14 +348,14 @@ python-crypto
 python-d2to1-0.2.10-1.el6
 python-daemon-1.5.2-1.el6
 python-deltarpm-3.5-0.5.20090913git.el6
-python-devel-2.6.6-37.el6_4
+python-devel
 python-django-appconf-0.5-3.el6
 python-django-compressor
 python-django-horizon
 python-django-horizon-doc
 python-django-openstack-auth
 python-dmidecode-3.10.13-3.el6_4
-python-ethtool-0.6-3.el6
+python-ethtool
 python-eventlet
 python-funcparserlib-0.3.5-1
 python-gflags-1.4-3.el6
@@ -432,7 +432,6 @@ python-wsgiref-0.1.2-6.el6
 pyxattr-0.5.0-1.el6
 qemu-1.2.0-24.el6
 qpid-cpp-server-ssl-0.14-22.el6_3
-qpid-cpp-server-store-0.14-22.el6_3
 qpid-qmf-0.14-14.el6_3
 qpid-tests-0.14-1.el6_2
 qpid-tools-0.14-6.el6_3
@@ -440,19 +439,19 @@ rabbitmq-server
 rbd-fuse
 resource-agents-3.9.5-56.1
 redhat-lsb-core
-rpm-build-4.8.0-32.el6
+rpm-build
 rst2pdf-0.16-1.el6
-rsync-3.0.6-9.el6
-rsyslog-5.8.10-6.el6
-rsyslog-relp-5.8.10-6.el6
-ruby-1.8.7.352-10.el6_4
+rsync
+rsyslog
+rsyslog-relp
+ruby
 ruby-augeas
-ruby-devel-1.8.7.352-10.el6_4
+ruby-devel
 ruby-extlib-0.9.13-5.el6
-ruby-libs-1.8.7.352-10.el6_4
+ruby-libs
 ruby-mysql-2.8.2-1.el6
-ruby-rdoc-1.8.7.352-10.el6_4
-ruby-ri-1.8.7.352-10.el6_4
+ruby-rdoc
+ruby-ri
 ruby-shadow-1.4.1-13.el6
 rubygem-abstract-1.0.0-1.el6
 rubygem-activesupport-3.0.10-1.el6
@@ -514,7 +513,7 @@ rubygem-treetop-1.4.10-1.el6
 rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
 rubygem-yajl-ruby-1.1.0-2~1.el6
-rubygems-1.3.7-1.el6
+rubygems
 savanna
 savanna-dashboard
 scapy-2.0.0.10-5.el6
@@ -545,12 +544,12 @@ vim-enhanced-7.2.411-1.8.el6
 virt-what-1.11-1.2.el6
 wget
 whatmask-1.2-7.el6
-wireshark-1.2.15-2.el6_2.1
+wireshark
 wxBase-2.8.12-2.el6
 wxGTK-2.8.12-2.el6
 wxGTK-gl-2.8.12-2.el6
-xfsprogs-3.1.1-10.el6
-xinetd-2.3.14-38.el6
+xfsprogs
+xinetd
 yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
