Update RPMs list. Add 'production' param to verstion.yaml
Change-Id: I209a577259a23a23c60dc5912843c5074ae0346a

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -330,7 +330,6 @@ python-actdiag-0.4.3-1
 python-alembic
 python-amqp
 python-amqplib-1.0.2-1.el6
-python-anyjson-0.3.3-2.el6
 python-argparse-1.2.1-2.el6
 python-blockdiag-1.2.4-1
 python-boto-2.5.2-3.el6
@@ -373,7 +372,6 @@ python-keyring-0.7-1.el6
 python-keystone
 python-keystoneclient
 python-keystoneclient-doc
-python-kombu
 python-lockfile-0.8-3.el6
 python-markdown-2.0.1-3.1.el6
 python-meld3-0.6.7-1.el6
@@ -555,3 +553,5 @@ yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
 python-pypcap
+nailgun
+fuel-ostf
