Use a new ruby 2.1 in the master node as a single ruby version
* remove unused gems;
* remove rbenv env;
* remove ruby compilation;
* use ruby 2.1 for master node.

TODO:
* remove raemon;
* remove build gems for Astute;
* update spec for Astute.

Change-Id: I099e65901ef3cf691f90d5bda4dd2f1a5cb76ea7
Implements: blueprint fuel-new-system-ruby-in-master-node

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -158,9 +158,9 @@ mlocate
 ntp
 openssh-clients
 policycoreutils
-puppet
-rubygem-netaddr
-rubygem-openstack
+ruby21-puppet
+ruby21-rubygem-netaddr
+ruby21-rubygem-openstack
 selinux-policy-targeted
 subscription-manager
 system-config-firewall-base
