--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -441,7 +441,7 @@ rst2pdf-0.16-1.el6
 rsync
 rsyslog
 rsyslog-relp
-ruby
+ruby-1.8.7.352-13.el6
 ruby-augeas
 ruby-devel
 ruby-extlib-0.9.13-5.el6
@@ -511,6 +511,35 @@ rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
 rubygem-yajl-ruby-1.1.0-2~1.el6
 rubygems
+augeas-libs-1.0.0-5.mira1
+libyaml-0.1.3-1.el6
+ruby-2.1.1-1.1.x86_64
+ruby21-nailgun-mcagents-0.1.0-2
+ruby21-rubygem-json-1.6.1-4.6.x86_64
+ruby21-puppet-3.4.2-1.mira1.noarch
+ruby21-rubygem-eventmachine-0.12.10-4.el6.x86_64
+ruby21-rubygem-amqp-0.9.10-1.el6.noarch
+ruby21-rubygem-rest-client-1.6.7-2.el6.noarch
+ruby21-rubygem-symboltable-1.0.2-1.noarch
+ruby21-rubygem-open4-1.3.3-2.el6.noarch
+ruby21-rubygem-json_pure-1.8.1-1.el6.noarch
+ruby21-facter-1.7.0-1.el6.x86_64
+ruby21-hiera-1.3.2-1.el6.noarch
+ruby21-rubygem-rgen-0.6.6-1.el6.noarch
+ruby21-rubygem-stomp-1.2.16-1.el6.noarch
+ruby21-rubygem-raemon-0.3.0-1.el6.noarch
+ruby21-rubygem-mcollective-client-2.4.1-1.el6.noarch
+ruby21-rubygem-astute-0.0.2-6_7e57598.el6.noarch
+ruby21-rubygem-openstack-1.1.2-2.el6.noarch
+ruby21-mcollective-2.4.1-1.el6.noarch
+ruby21-rubygem-amq-protocol-1.2.0-1.el6.noarch
+ruby21-rubygem-mime-types-2.2-3.el6.noarch
+ruby21-rubygem-i18n-0.6.9-1.el6.noarch
+ruby21-rubygem-activesupport-3.0.10-1.el6.noarch
+ruby21-mcollective-common-2.4.1-1.el6.noarch
+libselinux-ruby-2.0.94-5.3.el6_4.1.x86_64
+ruby21-augeas-0.5.0-17.3.x86_64
+ruby21-rubygem-shadow-1.4.1-21.el6.x86_64
 #sahara
 #sahara-dashboard
 scapy-2.0.0.10-5.el6
