--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -27,7 +27,7 @@ ql2200-firmware
 ql23xx-firmware
 ql2400-firmware
 ql2500-firmware
-bind-utils-9.8.2-0.17.rc1.el6_4.6
+bind-utils
 boost-program-options
 boost-system
 boost-thread
