--- a/bootstrap/sync/etc/mcollective/server.cfg
+++ b/bootstrap/sync/etc/mcollective/server.cfg
@@ -6,11 +6,8 @@ loglevel = debug
 direct_addressing = 1
 daemonize = 1
 
-# Set huge value of ttl to avoid cases with unsyncronized time between nodes
-# bash$ date -d '2033-5-18 3:33:20 UTC' +%s
-# 2000000000
-# It means that ttl equals 63 years and a half.
-ttl = 2000000000
+# Set TTL to 1.5 hours
+ttl = 5400
 
 # Plugins
 securityprovider = psk
@@ -19,7 +16,7 @@ plugin.psk = unset
 connector = rabbitmq
 plugin.rabbitmq.vhost = mcollective
 plugin.rabbitmq.pool.size = 1
-plugin.rabbitmq.pool.1.host = 
+plugin.rabbitmq.pool.1.host =
 plugin.rabbitmq.pool.1.port = 61613
 plugin.rabbitmq.pool.1.user = mcollective
 plugin.rabbitmq.pool.1.password = marionette
