Add uwsgi rpm package to iso
Change-Id: I2683cc3a276647df29f63f94852bd44870aff8e6

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -539,6 +539,7 @@ tinyproxy
 tmux
 unzip-6.0-1.el6
 usermode-1.102-3.el6
+uwsgi
 v8-3.14.5.7-3.el6
 vim-enhanced-7.2.411-1.8.el6
 virt-what-1.11-1.2.el6
