--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -189,11 +189,7 @@ mod_ssl-2.2.15-15.el6.1
 mod_wsgi-3.2-1.el6
 mtools-4.0.17-3.el6
 murano-api
-murano-common
-murano-conductor
 murano-dashboard
-murano-metadataclient
-murano-repository
 nagios-3.5.0-1.el6
 nagios-common-3.5.0-1.el6
 nagios-plugins-1.4.16-5.el6
@@ -378,6 +374,7 @@ python-lockfile-0.8-3.el6
 python-markdown-2.0.1-3.1.el6
 python-meld3-0.6.7-1.el6
 python-migrate-0.7.2-4.el6
+python-muranoclient
 python-netaddr-0.7.5-4.el6
 python-netifaces-0.5-1.el6
 python-neutron
