--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -64,6 +64,7 @@ disktype
 dmidecode-2.11-2.el6
 dnsmasq-2.65-5.el6
 dnsmasq-utils-2.65-5.el6
+docker-io
 dstat
 ed-1.1-3.3.el6
 erlang-R14B-04.8.el6
