--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -555,7 +555,6 @@ neutron-common
 neutron-dhcp-agent
 neutron-l3-agent
 neutron-metadata-agent
-neutron-ovs-cleanup
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
 neutron-server
@@ -705,6 +704,7 @@ python-pypcap
 python-pyudev
 python-requests
 python-routes
+python-saharaclient
 python-scapy
 python-scgi
 python-setuptools
@@ -761,6 +761,8 @@ ruby-yajl
 ruby1.8
 ruby1.8-dev
 rubygems
+sahara
+sahara-dashboard
 screen
 scrub
 seabios
