--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -557,7 +557,6 @@ neutron-common
 neutron-dhcp-agent
 neutron-l3-agent
 neutron-metadata-agent
-neutron-ovs-cleanup
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
 neutron-server
@@ -707,6 +706,7 @@ python-pypcap
 python-pyudev
 python-requests
 python-routes
+python-saharaclient
 python-scapy
 python-scgi
 python-setuptools
@@ -763,6 +763,8 @@ ruby-yajl
 ruby1.8
 ruby1.8-dev
 rubygems
+sahara
+sahara-dashboard
 screen
 scrub
 seabios
