--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -406,7 +406,7 @@ python-requests
 python-rhsm
 python-routes
 python-routes1.12-1.12.3-4.el6
-#python-saharaclient
+python-saharaclient
 python-seqdiag-0.8.2-1
 python-setuptools-0.6.10-3.el6
 python-simplejson
@@ -515,8 +515,6 @@ rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
 rubygem-yajl-ruby-1.1.0-2~1.el6
 rubygems
-augeas-libs-1.0.0-5.mira1
-libyaml-0.1.3-1.el6
 ruby-2.1.1-1.1.x86_64
 ruby21-nailgun-mcagents-0.1.0-2
 ruby21-rubygem-json-1.6.1-4.6.x86_64
@@ -544,8 +542,8 @@ ruby21-mcollective-common-2.4.1-1.el6.noarch
 libselinux-ruby-2.0.94-5.3.el6_4.1.x86_64
 ruby21-augeas-0.5.0-17.3.x86_64
 ruby21-rubygem-shadow-1.4.1-21.el6.x86_64
-#sahara
-#sahara-dashboard
+sahara
+sahara-dashboard
 scapy-2.0.0.10-5.el6
 screen-4.0.3-16.el6
 selinux-policy
