--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -705,7 +705,7 @@ python-pypcap
 python-pyudev
 python-requests
 python-routes
-python-saharaclient
+#python-saharaclient
 python-scapy
 python-scgi
 python-setuptools
@@ -762,8 +762,8 @@ ruby-yajl
 ruby1.8
 ruby1.8-dev
 rubygems
-sahara
-sahara-dashboard
+#sahara
+#sahara-dashboard
 screen
 scrub
 seabios
