Add dhcp package to the CentOS repository
Add ISC DHCP package to allow usage of dhcrelay.
dhcrelay makes it possible to relay DHCP packets
into the cobbler Docker container

implements blueprint fuel-containerization-of-services

Change-Id: If286af51a1ce737d87f11e5469987f78ba64a831

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -60,6 +60,7 @@ debootstrap
 deltaiso-3.5-0.5.20090913git.el6
 deltarpm-3.5-0.5.20090913git.el6
 dhclient
+dhcp
 disktype
 dmidecode-2.11-2.el6
 dnsmasq-2.65-5.el6
