--- a/fuelweb_test/requirements.txt
+++ b/fuelweb_test/requirements.txt
@@ -1,7 +1,7 @@
 nose==1.2.1
 git+https://github.com/stackforge/fuel-devops.git@2.3.1
 anyjson==0.3.1
-paramiko==1.10.1
+paramiko
 proboscis==1.2.6.0
 ipaddr
 python-glanceclient>=0.9.0
