--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -2,6 +2,7 @@
 @Core
 Django-1.3.4-1.el6
 Django14
+docker-io
 GeoIP-1.4.8-1.el6
 MySQL-client-5.5.28-7
 MySQL-client-wsrep-5.5.28_wsrep_23.7-12
@@ -174,6 +175,7 @@ libuv-devel-0.10.4-1.el6
 libxml2
 libyaml-0.1.3-1.el6
 lzop-1.02-0.9.rc1.el6
+lxc
 mailcap-2.1.31-2.el6
 mailx
 make-3.81-20.el6
