Add lates 6.5 kernel to ISO. Need by Docker
Change-Id: I2a505b4337be172eed6b6d3d29edc78a1558349a

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -149,10 +149,10 @@ httpd-2.2.15-15.el6.1
 httpd-tools-2.2.15-15.el6.1
 iproute-2.6.32-130.el6.netns.2.mira1
 keepalived-1.2.4-1.el6
-kernel-2.6.32-358.123.3.openstack.el6
-kernel-devel-2.6.32-358.123.3.openstack.el6
-kernel-firmware-2.6.32-358.123.3.openstack.el6
-kernel-headers-2.6.32-358.123.3.openstack.el6
+kernel
+kernel-devel
+kernel-firmware
+kernel-headers
 kernel-lt
 kernel-lt-devel
 kernel-lt-headers
