--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -554,3 +554,12 @@ yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
 python-pypcap
+zabbix
+zabbix-agent
+zabbix-sender
+zabbix-server
+zabbix-server-mysql
+zabbix-server-pgsql
+zabbix-web
+zabbix-web-mysql
+zabbix-web-pgsql
