--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -11,6 +11,8 @@ MySQL-server-5.5.28-7
 MySQL-server-wsrep-5.5.28_wsrep_23.7-12
 MySQL-shared-5.5.28-7
 MySQL-shared-wsrep-5.5.28_wsrep_23.7-12
+mongodb
+mongodb-server
 PyYAML-3.10-3.el6
 apr-1.3.9-5.el6
 apr-util-1.3.9-3.el6.1
@@ -163,6 +165,7 @@ libcephfs1
 libevent-devel-1.4.13-4.el6
 libfcgi-2.4.0-alt5.2
 libicu-4.2.1-9.1.el6_2
+libmongodb
 libqb
 librados2
 librbd1
@@ -554,3 +557,4 @@ yum-3.2.29-40.el6.centos
 yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
 python-pypcap
+zabbix
