Add mongodb and zabbix server to ISO
Change-Id: I0f80f50947c9faf69f09c8c232e912a79dba41a8
Closes-Bug:#1297163

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -534,6 +534,8 @@ mlocate
 module-init-tools
 mount
 mountall
+mongodb-clients
+mongodb-server
 msr-tools
 mtr-tiny
 multiarch-support
@@ -831,3 +833,5 @@ xz-utils
 zerofree
 zfs-fuse
 zlib1g
+zabbix-server-mysql
+zabbix-agent
