--- a/requirements-eggs.txt
+++ b/requirements-eggs.txt
@@ -1,46 +1,29 @@
+Babel==1.3
 Fabric==1.7.0
 Jinja2==2.7
 Mako==0.9.1
 MarkupSafe==0.18
 Paste==1.7.5.1
 PyYAML==3.10
-SQLAlchemy==0.7.8
+SQLAlchemy==0.7.9
 alembic==0.6.2
 amqplib==1.0.2
-anyjson==0.3.1
+anyjson==0.3.3
 argparse==1.2.1
 decorator==3.4.0
 distribute==0.7.3
-eventlet==0.9.17
 fysom==1.0.11
-greenlet==0.4.0
-hacking==0.7
-iso8601==0.1.8
-jsonschema==2.0.0
-kombu==2.1.8
+iso8601==0.1.9
+jsonschema==2.3.0
+kombu==2.5.14
 netaddr==0.7.10
 netifaces==0.8
-nose2==0.4.1
-nose==1.1.2
-ordereddict==1.1
 oslo.config==1.2.1
 pbr==0.5.21
 pip==1.2.1
-prettytable==0.6.1
-psycopg2==2.4.6
-pyOpenSSL==0.13
-pycrypto==2.6
-python-ceilometerclient==1.0.6
-python-cinderclient==1.0.6
-python-heatclient==0.2.5
-python-keystoneclient==0.4.1
-python-muranoclient==0.2.11
-python-novaclient==2.15.0
-python-savannaclient==0.3
-#python-saharaclient==0.6.0
-requests==1.1.0
-simplejson==2.6.2
-six==1.1.0
+psycopg2==2.5.1
+pycrypto==2.6.1
+simplejson==3.3.0
 tornado==3.0
 uWSGI==1.9.18.2
 ujson==1.33
