Add Nicira NSX support to Neutron
Change-Id: Ice7d81bfdbb2278b947bfac35c2ad8a9778b6857
Closes-Bug: #1305054

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -558,6 +558,7 @@ neutron-dhcp-agent
 neutron-l3-agent
 neutron-metadata-agent
 neutron-ovs-cleanup
+neutron-plugin-nicira
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
 neutron-server
