--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -276,6 +276,7 @@ openstack-heat-engine
 openstack-keystone
 openstack-neutron
 openstack-neutron-linuxbridge
+openstack-neutron-nicira
 openstack-neutron-openvswitch
 openstack-nova
 openstack-nova-api
