Revert "Move to ubuntu 12.04.4"
This reverts commit 17f5a29eea7dd9ba5ceea02011ecaf6b0be6ff6d.

Change-Id: Ib7999c638ecf0c853ac9055034a62137c3589936
Related-bug: #1307740

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -502,8 +502,8 @@ libyajl1
 libyaml-0-2
 linux-firmware
 linux-firmware-nonfree
-linux-headers-3.11.0-17
-linux-image-3.11.0-17
+linux-headers-3.8
+linux-image-3.8
 linux-libc-dev
 linux-server
 lksctp-tools
