--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -175,6 +175,7 @@ libuv-0.10.4-1.el6
 libuv-devel-0.10.4-1.el6
 libxml2
 libyaml-0.1.3-1.el6
+lrzip
 lzop-1.02-0.9.rc1.el6
 lxc
 mailcap-2.1.31-2.el6
