Added nfs-common package for Ubuntu
Change-Id: Ied70766df7a210ab387204700171532af821e68f
Closes-Bug: #1308621

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -561,6 +561,7 @@ neutron-ovs-cleanup
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
 neutron-server
+nfs-common
 nginx
 node-less
 nodejs
