--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -48,6 +48,7 @@ cinder-common
 cinder-scheduler
 cinder-volume
 cirros-testvm
+cirros-testvmware
 cluster-glue
 command-not-found
 command-not-found-data
