--- a/iso/ks.template
+++ b/iso/ks.template
@@ -153,12 +153,14 @@ cronie
 crontabs
 curl
 daemonize
+docker-io
 fuelmenu
 gdisk
 dhcp
 man
 mlocate
 ntp
+lrzip
 openssh-clients
 policycoreutils
 ruby21-puppet
@@ -314,6 +316,11 @@ mkdir -p /etc/puppet/manifests/
 cp /etc/puppet/modules/osnailyfacter/examples/site.pp /etc/puppet/manifests/site.pp
 cp ${SOURCE}/send2syslog.py /bin/send2syslog.py
 #ln -s /etc/puppet/modules/mcollective /etc/puppet/modules/nailgun /etc/puppet/modules/osnailyfacter  /etc/puppet/modules/stdlib /etc/puppet/modules/rabbitmq /etc/puppet/modules/puppetdb/ /etc/puppet/modules/postgresql/ /etc/puppet/modules/inifile/ /etc/puppet/modules/sysctl/ /opt/nailgun_puppet/
+mkdir -p /var/lib/hiera
+touch /var/lib/hiera/common.yaml /etc/puppet/hiera.yaml 
+
+# Deploy docker images and ctl tools if we built ISO with docker containers support
+[ -d "${SOURCE}/docker" ] && cp -r ${SOURCE}/docker ${repodir}/docker
 
 # Prepare local repository specification
 rm /etc/yum.repos.d/CentOS*.repo
@@ -339,11 +346,13 @@ cp ${SOURCE}/bootstrap_admin_node.conf /etc/init/bootstrap_admin_node.conf
 echo "ENABLED=1" > /etc/sysconfig/bootstrap_admin_node
 
 # Copying version.yaml file. It contains COMMIT_SHA of last commit.
-mkdir -p /etc/nailgun
+mkdir -p /etc/nailgun /etc/fuel
+#TODO(mattymo, LP#1313303): teach nailgun to read version.yaml from /etc/fuel/nailgun.yaml
 cp ${SOURCE}/version.yaml /etc/nailgun/version.yaml
+cp ${SOURCE}/version.yaml /etc/fuel/version.yaml
 
 # Generete Fuel UUID
-uuidgen > /etc/fuel-uuid
+uuidgen > /etc/fuel/fuel-uuid
 
 ###Run fuel menu
 [ -z "$showmenu" ] && showmenu="no"
@@ -407,3 +416,4 @@ cp -f /etc/skel/.bash* /root/
 [[ $(virt-what) = "virtualbox" ]] && echo "blacklist i2c_piix4" > /etc/modprobe.d/blacklist-i2c-piix4.conf
 
 %end
+
