--- a/iso/ks.template
+++ b/iso/ks.template
@@ -157,6 +157,7 @@ dhcp
 man
 mlocate
 ntp
+lrzip
 openssh-clients
 policycoreutils
 ruby21-puppet
@@ -283,7 +284,6 @@ cp -r ${SOURCE}/isolinux ${repodir}/centos/fuelweb/x86_64
 cp -r ${SOURCE}/repodata ${repodir}/centos/fuelweb/x86_64
 cp -r ${SOURCE}/Packages ${repodir}/centos/fuelweb/x86_64
 cp ${SOURCE}/.treeinfo ${repodir}/centos/fuelweb/x86_64
-cp -r ${SOURCE}/rhel ${repodir}
 
 # Copying Ubuntu files
 mkdir -p ${repodir}/ubuntu/fuelweb/x86_64/images
@@ -293,9 +293,6 @@ cp -r ${SOURCE}/ubuntu/dists ${repodir}/ubuntu/fuelweb/x86_64
 cp -r ${SOURCE}/ubuntu/pool ${repodir}/ubuntu/fuelweb/x86_64
 cp -r ${SOURCE}/ubuntu/installer-amd64/current/images/netboot/ubuntu-installer/amd64/linux ${repodir}/ubuntu/fuelweb/x86_64/images
 cp -r ${SOURCE}/ubuntu/installer-amd64/current/images/netboot/ubuntu-installer/amd64/initrd.gz ${repodir}/ubuntu/fuelweb/x86_64/images
-
-# Copying eggs/gems to the nailgun directory
-cp -r ${SOURCE}/gems ${repodir}
 
 # Copying bootstrap image
 mkdir -p ${repodir}/bootstrap
@@ -316,6 +313,9 @@ mkdir -p /etc/puppet/manifests/
 cp /etc/puppet/modules/osnailyfacter/examples/site.pp /etc/puppet/manifests/site.pp
 cp ${SOURCE}/send2syslog.py /bin/send2syslog.py
 #ln -s /etc/puppet/modules/mcollective /etc/puppet/modules/nailgun /etc/puppet/modules/osnailyfacter  /etc/puppet/modules/stdlib /etc/puppet/modules/rabbitmq /etc/puppet/modules/puppetdb/ /etc/puppet/modules/postgresql/ /etc/puppet/modules/inifile/ /etc/puppet/modules/sysctl/ /opt/nailgun_puppet/
+
+# Deploy docker images and ctl tools
+cp -r ${SOURCE}/docker ${repodir}/docker
 
 # Prepare local repository specification
 rm /etc/yum.repos.d/CentOS*.repo
@@ -341,11 +341,13 @@ cp ${SOURCE}/bootstrap_admin_node.conf /etc/init/bootstrap_admin_node.conf
 echo "ENABLED=1" > /etc/sysconfig/bootstrap_admin_node
 
 # Copying version.yaml file. It contains COMMIT_SHA of last commit.
-mkdir -p /etc/nailgun
+mkdir -p /etc/nailgun /etc/fuel
+#FIXME(mattymo): teach nailgun to read version.yaml from /etc/fuel/nailgun.yaml
 cp ${SOURCE}/version.yaml /etc/nailgun/version.yaml
+cp ${SOURCE}/version.yaml /etc/fuel/version.yaml
 
 # Generete Fuel UUID
-uuidgen > /etc/fuel-uuid
+uuidgen > /etc/fuel/fuel-uuid
 
 ###Run fuel menu
 [ -z "$showmenu" ] && showmenu="no"
@@ -409,3 +411,4 @@ cp -f /etc/skel/.bash* /root/
 [[ $(virt-what) = "virtualbox" ]] && echo "blacklist i2c_piix4" > /etc/modprobe.d/blacklist-i2c-piix4.conf
 
 %end
+
