Get rid of gems mirror
Change-Id: I28cfb7d6ce75d769380455ce525d4cd065a36b84

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -517,7 +517,7 @@ rubygem-thor-0.14.6-1.el6
 rubygem-treetop-1.4.10-1.el6
 rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
-rubygem-yajl-ruby-1.1.0-2~1.el6
+rubygem-yajl-ruby
 rubygems
 augeas-libs-1.0.0-5.mira1
 libyaml-0.1.3-1.el6
@@ -592,6 +592,7 @@ yum-utils-1.1.30-14.el6
 zlib-devel-1.2.3-29.el6
 python-pypcap
 nailgun
+shotgun
 fuel-ostf
 zabbix
 zabbix-agent
@@ -602,4 +603,3 @@ zabbix-server-pgsql
 zabbix-web
 zabbix-web-mysql
 zabbix-web-pgsql
-
