Remove hardcode version for qemu
Libguestfs updated. need remove hardcode version in requirements file

Change-Id: I2e8c1e04e1361f2f37a2878b59502a77c5b9a127

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -434,7 +434,7 @@ python-werkzeug
 python-wsgilog-0.3-1
 python-wsgiref-0.1.2-6.el6
 pyxattr-0.5.0-1.el6
-qemu-1.2.0-24.el6
+qemu
 qpid-cpp-server-ssl-0.14-22.el6_3
 qpid-qmf-0.14-14.el6_3
 qpid-tests-0.14-1.el6_2
