--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -517,7 +517,7 @@ rubygem-thor-0.14.6-1.el6
 rubygem-treetop-1.4.10-1.el6
 rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
-rubygem-yajl-ruby-1.1.0-2~1.el6
+rubygem-yajl-ruby
 rubygems
 augeas-libs-1.0.0-5.mira1
 libyaml-0.1.3-1.el6
@@ -593,6 +593,12 @@ zlib-devel-1.2.3-29.el6
 python-pypcap
 nailgun
 fuel-ostf
+shotgun
+fuelmenu
+nailgun-agent
+nailgun-mcagents
+nailgun-net-check
+python-fuelclient
 zabbix
 zabbix-agent
 zabbix-sender
