--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -517,7 +517,7 @@ rubygem-thor-0.14.6-1.el6
 rubygem-treetop-1.4.10-1.el6
 rubygem-tzinfo-0.3.37-1.el6
 rubygem-uuidtools-2.1.2-1.el6
-rubygem-yajl-ruby
+rubygem-yajl-ruby-1.1.0-1.el6
 rubygems
 augeas-libs-1.0.0-5.mira1
 libyaml-0.1.3-1.el6
@@ -609,3 +609,5 @@ zabbix-server-pgsql
 zabbix-web
 zabbix-web-mysql
 zabbix-web-pgsql
+rubygem-rethtool
+rubygem-ohai
