--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -429,13 +429,13 @@ python-werkzeug
 python-wsgilog-0.3-1
 python-wsgiref-0.1.2-6.el6
 pyxattr-0.5.0-1.el6
-qemu-1.2.0-24.el6
+qemu
 qpid-cpp-server-ssl-0.14-22.el6_3
 qpid-cpp-server-store-0.14-22.el6_3
 qpid-qmf-0.14-14.el6_3
 qpid-tests-0.14-1.el6_2
 qpid-tools-0.14-6.el6_3
-rabbitmq-server-2.8.7-2.el6
+rabbitmq-server
 rbd-fuse
 resource-agents-3.9.5-56.1
 redhat-lsb-core
