Don't replace "!" with "/" for cciss until after size calculation
We use /sys/class/block/${tgtdrive}/size to calculate target drive size.
Unlike device files in /dev, paths in /sys have "!" instead of "/", so
the substitution should not be made until we're done with /sys.

Change-Id: If88c311ceb41e6e3e00ef7e536329477d4243ea7
Closes-bug: #1312311

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -24,8 +24,7 @@ skipx
 drives=""
 for drv in `ls -1 /sys/block | grep "sd\|hd\|vd\|cciss"`; do
     if (grep -q 0 /sys/block/${drv}/removable); then
-        d=`echo ${drv} | sed -e 's/!/\//'`
-        drives="${drives} ${d}"
+        drives="${drives} ${drv}"
     fi
 done
 
@@ -87,6 +86,9 @@ if [ $tgtdrivesize -lt 30720 ]; then
     read -p "Press Enter to restart: " _
     reboot
 fi
+
+# paths in /dev have "/" instead of "!" for cciss devices
+tgtdrive=$(echo $tgtdrive | sed -e 's/!/\//')
 
 # source
 if test -e /dev/disk/by-uuid/will_be_substituted_with_actual_uuid; then
