--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -496,8 +496,8 @@ rubygem-mixlib-log-1.4.1-1.el6
 rubygem-mixlib-shellout-1.0.0-1.el6
 rubygem-moneta-0.6.0-1.el6
 rubygem-mongrel-1.1.5-3.el6
-rubygem-net-ssh-2.2.2-1.el6
-rubygem-net-ssh-gateway-1.1.0-1.el6
+rubygem-net-ssh
+rubygem-net-ssh-gateway
 rubygem-net-ssh-multi-1.1-1.el6
 rubygem-netaddr-1.5.0-2.el6
 rubygem-openstack
