Add python-guestfs to requirements-deb
Add package python-guestfs to requirements-deb
Partial-Bug:#1312755

Change-Id: I599a98a6d043f1f78d018332e05d6475e963e5fb

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -645,6 +645,7 @@ python-decorator
 python-dingus
 python-django
 python-django-horizon
+python-guestfs
 python-eventlet
 python-feedparser
 python-formencode
