Export astute and cobbler etc dirs as volumes
This is useful so that shotgun can obtain the
necessary configuration for the diagnostic
snapshot.

blueprint fuel-containerization-of-services

Change-Id: If74138973b955189480d099d70dcc517de1530cc

--- a/docker/astute/Dockerfile
+++ b/docker/astute/Dockerfile
@@ -25,4 +25,5 @@ RUN chmod +x /usr/local/bin/start.sh
 RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
 RUN yum clean all
 
+VOLUME /etc/astute
 CMD /usr/local/bin/start.sh
