--- a/docker/cobbler/Dockerfile
+++ b/docker/cobbler/Dockerfile
@@ -24,6 +24,7 @@ RUN /etc/init.d/httpd start && puppet apply -v /etc/puppet/modules/nailgun/examp
 RUN mkdir -p /usr/local/bin
 ADD start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
+RUN ln -s /etc/dnsmasq.conf /etc/cobbler.dnsmasq.conf
 
 RUN echo -e "[nailgun]\nname=Nailgun Local Repo\nbaseurl=file:/var/www/nailgun/centos/fuelweb/x86_64\ngpgcheck=0" > /etc/yum.repos.d/nailgun.repo
 RUN yum clean all
@@ -32,4 +33,5 @@ EXPOSE 67
 EXPOSE 69
 EXPOSE 80
 EXPOSE 443
+VOLUME /etc/cobbler
 CMD /usr/local/bin/start.sh
