Put version.yaml into /etc/fuel/$RELEASE/ dir
During master provisioning create /etc/fuel/5.0 directory, add
version.yaml and make symlink from /etc/fuel/5.0/version.yaml to
/etc/fuel/version.yaml

Change-Id: Ie9080720c60e29e43f3e858f40b25c60a5183423
Closes-Bug: #1317049
Implements: blueprint fuel-containerization-of-services

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -346,10 +346,11 @@ cp ${SOURCE}/bootstrap_admin_node.conf /etc/init/bootstrap_admin_node.conf
 echo "ENABLED=1" > /etc/sysconfig/bootstrap_admin_node
 
 # Copying version.yaml file. It contains COMMIT_SHA of last commit.
-mkdir -p /etc/nailgun /etc/fuel
-#TODO(mattymo, LP#1313303): teach nailgun to read version.yaml from /etc/fuel/nailgun.yaml
+RELEASE=$(awk '/release/{gsub(/"/, "");print $2}' ${SOURCE}/version.yaml)
+mkdir -p /etc/nailgun /etc/fuel/${RELEASE}
 cp ${SOURCE}/version.yaml /etc/nailgun/version.yaml
-cp ${SOURCE}/version.yaml /etc/fuel/version.yaml
+cp ${SOURCE}/version.yaml /etc/fuel/${RELEASE}/version.yaml
+ln -s /etc/fuel/${RELEASE}/version.yaml /etc/fuel/version.yaml
 
 # Generete Fuel UUID
 uuidgen > /etc/fuel/fuel-uuid
