Add unsupported_hardware option to the cmdline
This option disables the warning that blocks
installation on the hardware that is not
supported by this CentOS release.

Change-Id: Iac13fd39a154f6b524c2c9ccfa10351a150999a3
Closes-Bug: 1322502

--- a/iso/ks.template
+++ b/iso/ks.template
@@ -8,6 +8,8 @@ rootpw r00tme
 timezone --utc Etc/UTC
 firewall --disabled
 selinux --disabled
+# ignore unsupported hardware warning
+unsupported_hardware
 # SKIP CONFIGURING X
 skipx
 # NEVER ever place zerombr here, it breaks automated installation
