--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -373,6 +373,7 @@ python-keystone
 python-keystoneclient
 python-keystoneclient-doc
 python-kombu
+python-lesscpy
 python-lockfile-0.8-3.el6
 python-markdown-2.0.1-3.1.el6
 python-meld3-0.6.7-1.el6
