Add daemonize dependency to network_checker
https://pypi.python.org/pypi/daemonize/2.2.1

This is library used for creating system daemons in python,
we are currently starting listeners as daemons

Related to blueprint fuel-plugable-checks

Change-Id: I63e2524c26c3e854bdd9ca3e4ccd7d91adfeaf81

--- a/packages/deb/specs/nailgun-net-check/debian/control
+++ b/packages/deb/specs/nailgun-net-check/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.9.2
 
 Package: nailgun-net-check
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends}, python-pypcap, vlan, python-scapy, cliff-tablib
+Depends: ${misc:Depends}, ${python:Depends}, python-pypcap, vlan, python-scapy, cliff-tablib, python-stevedore, python-daemonize, python-yaml
 Description: NailGun client net-check
  .
