Add plugin required for Nicira NSX integration
Change-Id: I0d435787fbc38d39389efaa6dd8493ddef2a663c
Closes-Bug: 1305054

--- a/requirements-deb.txt
+++ b/requirements-deb.txt
@@ -562,6 +562,7 @@ neutron-l3-agent
 neutron-metadata-agent
 neutron-plugin-openvswitch
 neutron-plugin-openvswitch-agent
+neutron-plugin-vmware
 neutron-server
 nfs-common
 nginx
