Remove hardcoded version for curl
curl version updated in centos upstream repository

Change-Id: I16e1fe31b0188649ec5c48e392527bfb4e78ba48

--- a/requirements-rpm.txt
+++ b/requirements-rpm.txt
@@ -54,7 +54,7 @@ cronie
 cronie-anacron
 cronie-noanacron
 crontabs-1.10-33.el6
-curl-7.19.7-37.el6_4
+curl
 daemonize
 db4-4.7.25-18.el6_4
 db4-cxx-4.7.25-18.el6_4
